Using gemini token for spacing- Issue:74702

--- a/src/components/conversational-designer/conversational-designer.scss
+++ b/src/components/conversational-designer/conversational-designer.scss
@@ -9,9 +9,9 @@ body {
 }
 .AddFlow {
   display: block;
-  margin-top: 5px;
+  margin-top: var(--spacing-comp-01);
   width: 34%;
-  bottom: 5px;
+  bottom: var(--spacing-comp-01);
   position: sticky;
 }
 
